web/style.css
/* ... */
.tag.is-active { color: var(--highlight); }

.gallery:has(.image:nth-child(2)) {
    /* How far should galleries stick out from text? */
    /* --offset: calc((100vw - var(--container)) / -8); */
    --offset: 0;

    display: flex;
    gap: var(--space-sm);
    align-items: flex-start;
}

/* Extend the margins for galleries with multiple images */
.gallery:has(figure:nth-child(2)) {
    margin-inline: min(0px, var(--offset));
    width: max(100%, calc(100% + (-2 * var(--offset))));
}

.gallery img {
    border-radius: 3px;
}

.gallery:has(.image:nth-child(2)):not(:first-child),
.gallery + * {
    margin-top: var(--space-lg);
}

[id^="fn"] {
    font-size: var(--font-sm);
}

hr.dots {
    align-self: flex-end;
    margin: 0 7px;
    background-color: transparent;
    border-bottom: 2px dashed var(--callout-background);
}

#search {
    display: block;
    background-color: var(--background);
    border: 1px solid var(--accents);
    box-shadow: var(--shadow);
    position: fixed;
    top: 20%;
    margin-inline: auto;
    width: calc(100% - 20px);
    max-width: 660px;
    padding: 0;
    border-radius: 8px;
    color: var(--text);
    pointer-events: none;
    scale: 0.97;
    transform: translateY(10px);
    transition: all 0.15s ease;
    opacity: 0;
}

#search[open] {
    scale: 1;
    opacity: 1;
    transform: translateY(0);
}

#search form {
    position: sticky;
    top: 0;
    background-color: var(--background);
}

#search form:has(~ ul:not(:empty)) {
    border-bottom: 1px solid var(--callout-background);
}

#search input {
    background-color: transparent;
    border: none;
    font-size: var(--font-base);
    font-family: var(--font-sans);
    font-style: italic;
    width: 100%;
    padding: var(--space-md);
    color: inherit;
}

#search input:active,
#search input:focus {
    outline: none;
}

#search input::placeholder {
    color: var(--accents);
}

dialog::backdrop {
    --lightness: 5%;
    background-color: hsla(var(--primary), var(--saturation, 80%), var(--lightness), 0.8);
    backdrop-filter: blur(4px);
    -webkit-backdrop-filter: blur(4px);
}

#search ul:not(:empty) {
    list-style: none;
    padding: var(--space-md) 0;
    max-height: 300px;
    overflow: auto;
}

#search ul mark {
    color: var(--muted);
    font-family: var(--sans);
    font-style: italic;
    background-color: transparent;
}

#search ul li {
    margin-top: 0;
    padding: var(--space-md);
    margin-block: calc(-1 * var(--space-md));
}

#search ul li:not(:first-child) {
    margin-block: calc(-1.5 * var(--space-md)); /* bein cheeky here */
}

#search ul li a {
    display: block;
    border-bottom: none;
    padding: var(--space-xs) var(--space-sm) var(--space-sm);
    margin: calc(-1 * var(--space-xs));
}

#search ul li[aria-selected="true"] a {
    border-radius: 4px;
    background-color: var(--callout-background);
}

.social-logo { width: 25px; height: auto; }

@media screen and (min-width: 599px) {
    .md\:text-right { text-align: right; }
}

@media screen and (min-width: 769px) {
    .footer { flex-direction: row; }

    .footer_right {
        text-align: right;
        margin-top: 0;
    }

    .month_items {
        margin-left: 0.5rem;
    }
}

@media screen and (min-width: 950px) {
    .container {
        --sidebar-maxwidth: 300px;
        --sidebar-width: min(
            calc((100vw - var(--container) - 2*var(--space-md)) / 2),
            var(--sidebar-maxwidth)
        );
    }

    /* .content .gallery:not(:has(.image:nth-child(2))) {
        display: block;
        position: relative;
        margin-top: 0;
        height: 0;
    }

    .content .gallery:not(:has(.image:nth-child(2))) figure {
        position: relative;
        left: calc(var(--container) - 2*var(--space-md));
        width: var(--sidebar-width);
        margin-top: var(--space-md);
        padding-left: var(--space-md);
    } */
}

